Redesign Desktop UI with modern dark theme
Refactored the Desktop class to use a modern dark-themed UI with improved layout, custom-styled components, and better font and color choices for readability. Enhanced currency combo boxes and buttons for a more polished look. Also improved error handling for input parsing and updated the money display format. Minor update in WebService to use URI for URL creation.